--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@floating-ui/vue": "^1.1.5",
         "@vitejs/plugin-vue": "^5.1.4",
         "bootstrap-vue-3": "^0.5.1",
         "cors": "^2.8.5",
+        "tippy.js": "^6.3.7",
         "vue": "^3.5.10",
         "vue-loader": "^17.4.2",
         "vue-router": "^4.4.5"
