--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.1.4",
+        "bootstrap-vue-3": "^0.5.1",
         "vue": "^3.5.10",
-        "vue-loader": "^17.4.2"
+        "vue-loader": "^17.4.2",
+        "vue-router": "^4.4.5"
     }
 }
