--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "bootstrap-vue-3": "^0.5.1",
         "vue": "^3.5.10",
         "vue-loader": "^17.4.2",
+        "vue-multiselect": "^3.0.0-beta.3",
         "vue-router": "^4.4.5"
     }
 }
