--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.1.4",
+        "@vueform/vueform": "^1.12.7",
+        "bootstrap": "^5.3.5",
+        "bootstrap-icons": "^1.11.3",
         "bootstrap-vue-3": "^0.5.1",
+        "date-fns": "^4.1.0",
         "vue": "^3.5.10",
         "vue-loader": "^17.4.2",
+        "vue-multiselect": "^3.2.0",
         "vue-router": "^4.4.5"
     }
 }
